<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="237dp"
        tools:layout_editor_absoluteY="232dp">

        <Button
                android:id="@+id/button_activity1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_1_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        <Button
                android:id="@+id/button_activity2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_2_name" />

        <Button
                android:id="@+id/button_activity3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_3_name" />

        <Button
                android:id="@+id/button_activity4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_4_name" />

        <Button
                android:id="@+id/button_activity5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_5_name" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>