<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:orientation="vertical">

    <TextView
            android:id="@+id/send_4"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_common_send" />

    <EditText
            android:id="@+id/edit_send_4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/activity_common_send_hint"
            android:inputType="text" />

    <Button
            android:id="@+id/button_send_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_common_send_button" />

    <TextView
            android:id="@+id/text_received_4"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_common_received" />

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        <TextView
                android:id="@+id/edit_received_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
    </ScrollView>

</LinearLayout>